
      \item The legacy graphics devices \code{pictex()} and
      \code{xfig()} are now deprecated.  They do not support recent
      graphics enhancements and their font-handling is rudimentary. The
      intention is to retain them for historical interest as long as
      they remain somewhat functional.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{pairwise.t.test()} misbehaved when subgroups had 0 DF
      for variance, even with \code{pool.sd=TRUE} \PR{18594} (Jack Berry).

      \item Arguments are now properly forwarded to methods on S4 generics
      with \dots{} in the middle of their formal arguments. This was
      broken for the case when a method introduced an argument but did
      not include \dots{} in its own formals. Thanks to Hervé Pagès for
      the report \PR{18538}.

      \item Probability distribution functions \code{[dpq]<distrib>(x, *)},
      but also \code{bessel[IKJY](x, .)} are now consistently preserving
      \code{attributes(x)} when \code{length(x) == 0}, e.g., for a
      \eqn{2 \times 0}{2 x 0} matrix, thanks to Karolis Koncevičius'
      report \PR{18509}.

      \item Group \dQuote{Summary} computations such as
      \code{sum(1:3, 4, na.rm = 5, NA, 7, na.rm = LL)} now give an error
      instead of either \code{17} or \code{NN} for \code{LL} true or false,
      as proposed by Ivan Krylov on the R-devel mailing list.  (This
      also means it is now an error to specify \code{na.rm} more than once.)

      \item \code{as.complex(x)} now returns \code{complex(real=x,
      imaginary=0)} for \emph{all} numerical and logical \code{x}, notably
      also for \code{NA} or \code{NA_integer_}.

      \item Directories are now omitted by
      \code{file.copy(,recursive = FALSE)} and in \code{file.append()}
      (\PR{17337}).

      \item \code{gsub()} and \code{sub()} are now more robust to integer
      overflow when reporting errors caused by too large input strings
      (\PR{18346}).
