@@ -1596,12 +1596,14 @@ setDataPart <- function(object, value, check = TRUE) {
             skipExt <- skipDef@contains[[to]]
             if (!is.null(skipExt)) {
                 body(f, envir = environment(f)) <-
-                    call("as", body(skipExt@replace), byExt@subClass)
+                    substitute(methods::as(BODY, TO),
+                               list(BODY = body(skipExt@replace),
+                                    TO = byExt@subClass))
             }
         } else {
             expr <- substitute({
-                .value <- as(from, BY, STRICT)
-                as(.value, TO) <- value
+                .value <- methods::as(from, BY, STRICT)
+                methods::as(.value, TO) <- value
                 value <- .value
                 BYEXPR
             }, list(BY=by, TO = to, BYEXPR = byExpr, STRICT = strictBy))
@@ -1659,9 +1661,9 @@ setDataPart <- function(object, value, check = TRUE) {
 	}
     }
     else {
-	substitute({ value <- new(CLASS)
+	substitute({ value <- methods::new(CLASS)
 		     for(what in TOSLOTS)
-			 slot(value, what) <- slot(from, what)
+                         methods::slot(value, what) <- methods::slot(from, what)
 		     value },
 		   list(CLASS = chClass, TOSLOTS = toSlots))
     }
@@ -1671,7 +1673,7 @@ setDataPart <- function(object, value, check = TRUE) {
     toSlots <- names(toDef@slots)
     substitute({
         for(what in TOSLOTS)
-            slot(from, what) <- slot(value, what)
+            methods::slot(from, what) <- methods::slot(value, what)
         from
     }, list(TOSLOTS = toSlots))
 }
